# torchxai

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.ipynb
cfg/base/data_args/image_classification/: cifar10.yaml  imagenet_1k.yaml
cfg/base/defaults/eval_preprocess_augs/: image_preprocess.yaml
cfg/base/defaults/general_args/: default.yaml
cfg/base/defaults/train_preprocess_augs/: image_preprocess.yaml
cfg/base/defaults/training_args/: default.yaml
cfg/base/defaults/training_args/model_checkpoint_config/: default.yaml
cfg/base/model_args/: fusion_model_toy_model_cifar10.yaml  timm_model_resnet50.yaml  tv_model_alexnet.yaml
cfg/explainers/: hydra.yaml
cfg/explainers/image_classification_explainer/: with_preprocess.yaml
notebooks/: axiomatic.ipynb
notebooks/metrics/: axiomatic.ipynb
scripts/: test_explainers.sh  test_metrics.sh
scripts/examples/: explain_imagenet_1k.sh
scripts/runners/: explain_image_classification.sh
src/torchxai/explainers/: __init__.py  _utils.py  explainer.py  factory.py  random.py
src/torchxai/explainers/_grad/: deeplift.py  deeplift_shap.py  gradient_shap.py  guided_backprop.py  input_x_gradient.py  integrated_gradients.py  lrp_wrapper.py  noise_tunnel.py  saliency.py
src/torchxai/explainers/_perturbation/: feature_ablation.py  kernel_shap.py  lime.py  lime_base.py  occlusion.py  shapley_value_sampling.py
src/torchxai/explanation_framework/: explanation_framework.py
src/torchxai/explanation_framework/batch_computation_handler/: base.py  factory.py
src/torchxai/explanation_framework/batch_computation_handler/explanations/: explanations.py
src/torchxai/explanation_framework/core/: explanation_framework.py
src/torchxai/explanation_framework/explained_model/: base.py  image_classification.py
src/torchxai/explanation_framework/explainers/: _utils.py  factory.py  random.py  torch_fusion_explainer.py
src/torchxai/explanation_framework/image_classification/: image_classification_explanation_framework.py
src/torchxai/explanation_framework/utils/: common.py  constants.py  containers.py  h5io.py
src/torchxai/image_classification/: image_classification_explanation_framework.py
src/torchxai/image_classification/utils/: evaluation.py  visualization.py
src/torchxai/metrics/: __init__.py
src/torchxai/metrics/_utils/: batching.py  common.py  perturbation.py  visualization.py
src/torchxai/metrics/axiomatic/: completeness.py  input_invariance.py  monotonicity_corr_and_non_sens.py  utilities.py
src/torchxai/metrics/batch_compute_cache/: aopc.py  base.py  completeness.py  explanations.py  infidelity.py  sensitivity.py  torchfusion_expl_metrics.py
src/torchxai/metrics/complexity/: complexity.py  complexity_entropy.py  complexity_sundararajan.py  effective_complexity.py  sparseness.py
src/torchxai/metrics/faithfulness/: abpc.py  aopc.py  faithfulness_corr.py  faithfulness_estimate.py  infidelity.py  monotonicity.py  selectivity.py  sensitivity_n.py
src/torchxai/metrics/localization/: attribution_localization.py
src/torchxai/metrics/robustness/: sensitivity.py  sensitivity_max.py  utilities.py
src/torchxai/runners/: explain_image_classification.py
tests/: conftest.py
tests/explainers/: base.py  utils.py
tests/explainers/_grad/: test_deeplift.py  test_deeplift_shap.py  test_gradient_shap.py  test_guided_backprop.py  test_input_x_gradient.py  test_integrated_gradients.py  test_saliency.py
tests/explainers/_perturbation/: test_feature_ablation.py  test_kernel_shap.py  test_lime.py  test_occlusion.py
tests/explanation_framework/explainers/: base.py
tests/explanation_framework/explainers/_grad/: test_deeplift.py  test_deeplift_shap.py  test_gradient_shap.py  test_guided_backprop.py  test_input_x_gradient.py  test_integrated_gradients.py  test_saliency.py
tests/explanation_framework/explainers/_perturbation/: test_feature_ablation.py  test_lime.py
tests/helpers/: __init__.py  basic.py  basic_models.py  classification_models.py
tests/metrics/: base.py  test_imports.py
tests/metrics/axiomatic/: test_completeness.py  test_input_invariance.py  test_non_sensitivity.py
tests/metrics/complexity/: test_complexity.py  test_complexity_sundararajan.py  test_effective_complexity.py  test_sparseness.py
tests/metrics/faithfulness/: test_aopc.py  test_faithfulness_corr.py  test_faithfulness_estimate.py  test_infidelity.py  test_monotonicity.py  test_monotonicity_corr.py  test_sensitivity_n.py
tests/multi_target_metrics/axiomatic/: test_completeness.py  test_completeness_mt.py  test_input_invariance_mt.py  test_non_sensitivity_mt.py
tests/multi_target_metrics/complexity/: test_complexity_mt.py  test_complexity_sundararajan_mt.py  test_effective_complexity.py  test_effective_complexity_mt.py  test_sparseness_mt.py
tests/multi_target_metrics/faithfulness/: test_aopc.py  test_aopc_mt.py  test_faithfulness_corr.py  test_faithfulness_corr_mt.py  test_faithfulness_estimate.py  test_faithfulness_estimate_mt.py  test_infidelity.py  test_infidelity_mt.py  test_monotonicity.py  test_monotonicity_corr_mt.py  test_monotonicity_mt.py  test_sensitivity_n.py  test_sensitivity_n_mt.py
tests/utils/: common.py  containers.py
torchxai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+69 files in other folders)
